--- a/.github/workflows/daily-news-scraper.yml
+++ b/.github/workflows/daily-news-scraper.yml
@@ -36,11 +36,11 @@ jobs:
       
       - name: Run news scraper and send emails
         env:
-          DATABASE_URL: ${{ secrets.postgresql://app_user:Nxy9NrSa8vaskK1lqnSZnc82F1U5RBJe@dpg-d4iouuidbo4c73bto340-a.oregon-postgres.render.com/data_source_db }}
-          EMAIL_USER: ${{ secrets.stellaisokpehi21@gmail.com }}
-          EMAIL_PASSWORD: ${{ secrets.tnfb wvtj gjcg ednn }}
-          SMTP_SERVER: ${{ secrets.smtp.gmail.com }}
-          SMTP_PORT: ${{ secrets.587 }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL}}
+          EMAIL_USER: ${{ secrets.RECIPIENT_EMAIL }}
+          EMAIL_PASSWORD: ${{ secrets.SMTP_PASS }}
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
         run: |
           python scheduler.py
       
